--- a/hw3-chens1/pom.xml
+++ b/hw3-chens1/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>edu.cmu.lti.11791.f13.hw3</groupId>
-	<artifactId>chens1-hw3</artifactId>
+	<artifactId>hw3-chens1</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<repositories>
 		<repository>
@@ -41,7 +41,7 @@
 							<goal>perform</goal>
 						</goals>
 						<configuration>
-							<pomFileName>chens1-hw3/pom.xml</pomFileName>
+							<pomFileName>hw2-chens1/pom.xml</pomFileName>
 						</configuration>
 					</execution>
 				</executions>
@@ -74,9 +74,15 @@
 			<artifactId>uimaj-as-jms</artifactId>
 			<version>2.4.0</version>
 		</dependency>
+		<dependency>
+			<groupId>edu.stanford.nlp</groupId>
+			<artifactId>stanford-corenlp</artifactId>
+			<version>1.3.3</version>
+		</dependency>
+		
 	</dependencies>
 	<scm>
-		<connection>scm:git:git@github.com:JerrySun363/hw3-chens1.git</connection>
-		<developerConnection>scm:git:git@github.com:JerrySun363/hw3-chens1.git</developerConnection>
+		<connection>scm:git:git@github.com:JerrySun363/hw2-chens1.git</connection>
+		<developerConnection>scm:git:git@github.com:JerrySun363/hw1-chens1.git</developerConnection>
 	</scm>
 </project>
